--- a/Tutorial.html
+++ b/Tutorial.html
@@ -18,7 +18,7 @@
     <script type="text/javascript">
       window.MathJax = {
         tex: {
-          inlineMath: [['$', '$'], ['\(', '\)']],
+          inlineMath: [['$', '$'], ['\(', '\)'],['\[','\]']],
           displayMath: [['$$', '$$'], ['\[', '\]']]
         },
         svg: {
