--- a/Tutorial.html
+++ b/Tutorial.html
@@ -18,8 +18,8 @@
     <script type="text/javascript">
       window.MathJax = {
         tex: {
-          inlineMath: [['$', '$'], ['\(', '\)'],['\[','\]']],
-          displayMath: [['$$', '$$'], ['\[', '\]']]
+          inlineMath: [['$', '$'], ['\\(', '\\)'],['\\[','\\]']],
+          displayMath: [['$$', '$$'], ['\\[', '\\]']]
         },
         svg: {
           fontCache: 'global'
